--- a/dotpycs/nbproject/project.properties
+++ b/dotpycs/nbproject/project.properties
@@ -29,13 +29,15 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.dotPycsLib.jar=..\\dotPycsLib.jar
 file.reference.jna.jar=..\\jna.jar
+file.reference.ojdbc6.jar=..\\ojdbc6.jar
 file.reference.skype-java-api-1.5.jar=..\\skype-java-api-1.5.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.dotPycsLib.jar}:\
     ${file.reference.jna.jar}:\
-    ${file.reference.skype-java-api-1.5.jar}
+    ${file.reference.skype-java-api-1.5.jar}:\
+    ${file.reference.ojdbc6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
